# BIOS_COMPUTERVISION

./: CMakeLists.txt  README.md
biosmabe/: CMakeLists.txt  MabeFeatureComparison.cpp  MabeFeatureComparison.h  MabeROIDetection.cpp  MabeROIDetection.h  MabeSegmentation.cpp  MabeSegmentation.h  baseclass.cpp  baseclass.h  biosmabe.cpp  biosmabe.h  utils.cpp  utils.h
cmake/: Config.cmake.in  InstallConfig.cmake  LibraryConfig.cmake  SetEnv.cmake
examples/: CMakeLists.txt  test1BiosMabeLib.cpp  test1ModuloFeatureComparison.cpp  test1ModuloRoiDetection.cpp  test1ModuloSegmentation.cpp
gui/: CMakeLists.txt  GUI_SIV.pro  MABE_core  main.cpp  mainwindow.h  mainwindow.ui  resources.qrc
gui/resources/lang/: instructions.txt  mabeSIV_en.po  mabeSIV_en.qm  mabeSIV_en.ts  mabeSIV_pt.po  mabeSIV_pt.qm  mabeSIV_pt.ts
gui/src/: constants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/src/appControllers/: apicontroller.cpp  apicontroller.h  eventloggercontroller.cpp  eventloggercontroller.h  jsoncontroller.cpp  jsoncontroller.h
gui/src/appControllers/mvc/: mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  referenciaundrefrigeracion.cpp  referenciaundrefrigeracion.h
gui/src/loginwindow/: loginwindow.cpp  loginwindow.h  loginwindow.ui
gui/src/m1_maestroReferencias/: maestroreferencias.cpp  maestroreferencias.h  maestroreferencias.ui
gui/src/m1_maestroReferencias/agregarreferencias/: agregarroi.cpp  agregarroi.h  agregarroi.ui  registrarnuevareferencia.cpp  registrarnuevareferencia.h  registrarnuevareferencia.ui  seleccionarroi.cpp  seleccionarroi.h  seleccionarroi.ui
gui/src/m2_entrenadorModelos/: entrenamientomodelos.cpp  entrenamientomodelos.h  entrenamientomodelos.ui
gui/src/m3_inspectorVisual/: inspeccionvisual.cpp  inspeccionvisual.h  inspeccionvisual.ui
gui/src/settingsWindow/: settingswindow.cpp  settingswindow.h  settingswindow.ui
